--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/entities.yml
@@ -97,6 +97,105 @@
         - "音波步枪:1:1:0.25"
         - "海贝法杖:1:1:0.25"
         - "海蚌锤:1:1:0.25"
+硫磺比目鱼:
+    buffImmute:
+        - "辐射"
+        - "硫磺海剧毒"
+        - "中毒"
+        - "剧毒"
+    buffInflict:
+        - "辐射|50|1"
+    drop:
+        - "铜币:250:750:1"
+炮弹水母:
+    buffImmute:
+        - "深渊水压"
+    buffInflict:
+        - "深渊水压|50|1"
+    drop:
+        - "铜币:350:800:1"
+剧毒米诺鱼:
+    buffImmute:
+        - "深渊水压"
+    buffInflict:
+        - "中毒|100|1"
+    drop:
+        - "铜币:500:800:1"
+眼后剧毒米诺鱼:
+    buffImmute:
+        - "深渊水压"
+    buffInflict:
+        - "剧毒|100|1"
+    drop:
+        - "铜币:500:800:1"
+        - "深渊细胞:1:1:0.5"
+流光石首鱼:
+    buffImmute:
+        - "深渊水压"
+    buffInflict:
+        - "破损盔甲|200|0"
+        - "深渊水压|50|0"
+    drop:
+        - "铜币:1000:2000:1"
+        - "虚空石:1:3:1"
+        - "深渊细胞:1:1:0.5"
+        - "流明晶:1:1:0.5"
+激光鱼:
+    buffImmute:
+        - "深渊水压"
+    drop:
+        - "铜币:1500:2500:1"
+        - "流明晶:1:1:0.5"
+魔鬼鱼:
+    buffImmute:
+        - "深渊水压"
+        - "燃烧"
+        - "狱炎"
+        - "破晓"
+    buffInflict:
+        - "深渊水压|80|0"
+    drop:
+        - "铜币:1000:2500:1"
+        - "深渊细胞:1:3:0.75"
+        - "流明晶:1:1:0.5"
+        - "熔渣矿:3:9:1"
+幻海水母:
+    buffImmute:
+        - "深渊水压"
+    buffInflict:
+        - "深渊水压|40|0"
+        - "带电|50|0"
+        - "剧毒|100|0"
+    drop:
+        - "铜币:1500:2500:1"
+        - "深渊细胞:5:7:1"
+        - "活力凝胶:1:1:0.1"
+        - "魔力凝胶:1:1:0.1"
+        - "生命凝胶:1:1:0.1"
+        - "尤利西斯蝶:1:1:0.1"
+        - "茱莉娅蝶:1:1:0.1"
+巨像乌贼:
+    buffImmute:
+        - "深渊水压"
+    buffInflict:
+        - "深渊水压|100|0"
+    drop:
+        - "铜币:200000:300000:1"
+        - "深渊细胞:12:25:1"
+        - "灵魂之锋:1:1:0.25"
+        - "乌贼之哀歌:1:1:0.25"
+猎魂鲨:
+    buffImmute:
+        - "深渊水压"
+    buffInflict:
+        - "深渊水压|200|0"
+        - "碎甲|200|0"
+    drop:
+        - "铜币:200000:350000:1"
+        - "虚空石:32:48:1"
+        - "深渊细胞:7:11:1"
+        - "猎魂鲨牙:3:4:1"
+        - "幻妖龙吟:1:1:0.35"
 噬魂怪:
     soundDamaged: entity.hit.flesh
     drop:
