Resource pack update
Monsters sprite; light map tweak

--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
@@ -253,6 +253,42 @@ skins.252=252
 skins.253=253
 skins.254=254
 skins.255=255
+skins.256=256
+skins.257=257
+skins.258=258
+skins.259=259
+skins.260=260
+skins.261=261
+skins.262=262
+skins.263=263
+skins.264=264
+skins.265=265
+skins.266=266
+skins.267=267
+skins.268=268
+skins.269=269
+skins.270=270
+skins.271=271
+skins.272=272
+skins.273=273
+skins.274=274
+skins.275=275
+skins.276=276
+skins.277=277
+skins.278=278
+skins.279=279
+skins.280=280
+skins.281=281
+skins.282=282
+skins.283=283
+skins.284=284
+skins.285=285
+skins.286=286
+skins.287=287
+skins.288=288
+skins.289=289
+skins.290=290
+skins.291=291
 
 name.1=regex:\u53f2\u83b1\u59c6\u00a72|\u53f2\u83b1\u59c6\u738b|\u53f2\u83b1\u59c6\u5750\u9a91
 name.2=\u5ca9\u6d46\u53f2\u83b1\u59c6
@@ -345,7 +381,7 @@ name.88=\u661f\u5c18\u4e4b\u9f99\u00a71
 name.89=\u661f\u5c18\u4e4b\u9f99
 name.90=\u6cf0\u62c9\u60a0\u60a0\u7403
 name.91=\u514b\u82cf\u9c81\u4e4b\u773c\u60a0\u60a0\u7403
-name.92=regex:\u6728\u5236\u60a0\u60a0\u7403|\u4e16\u754c\u541e\u566c\u8005
+name.92=regex:\u6728\u5236\u60a0\u60a0\u7403|\u4e16\u754c\u541e\u566c\u8005|\u541e\u566c\u8005
 name.93=\u6291\u90c1\u7403
 name.94=\u94fe\u9524
 name.95=\u706b\u7130\u9524
@@ -509,3 +545,39 @@ name.252=XF-09\u201c\u963f\u745e\u65af\u201d\u9ad8\u65af\u6838\u5f39\u53d1\u5c04
 name.253=XF-09\u201c\u963f\u745e\u65af\u201d\u956d\u5c04\u52a0\u519c\u70ae
 name.254=XF-09\u201c\u963f\u745e\u65af\u201d\u79bb\u5b50\u52a0\u519c\u70ae
 name.255=XF-09\u201c\u963f\u745e\u65af\u201d\u7279\u65af\u62c9\u52a0\u519c\u70ae
+name.256=\u86e4
+name.257=\u7edd\u671b\u4e4b\u77f3
+name.258=\u5bcc\u517b\u9cd0\u9c7c
+name.259=\u9b3c\u94c3\u6c34\u6bcd
+name.260=\u8150\u5316\u56ca
+name.261=\u6b92\u547d\u5996\u7075
+name.262=\u7075\u9b42\u996e\u98df\u8005
+name.263=\u94a8\u94a2\u56de\u8f6c\u5668
+name.264=\u94a8\u94a2\u60ac\u6d6e\u5766\u514b
+name.265=\u94a8\u94a2\u6f2b\u6b65\u8005
+name.266=\u767d\u7f8a\u5ea7
+name.267=\u5e7b\u661f\u63a2\u6d4b\u5668
+name.268=\u5bf9\u649e\u89c2\u661f\u773c
+name.269=\u661f\u8f89\u53f2\u83b1\u59c6
+name.270=\u761f\u75ab\u9f9f
+name.271=\u761f\u75ab\u9f9f\u00a71
+name.272=\u5e7b\u9b42
+name.273=\u4eb5\u6e0e\u732e\u796d\u8005
+name.274=\u541e\u98df\u9b54
+name.275=\u786b\u78fa\u6bd4\u76ee\u9c7c
+name.276=\u70ae\u5f39\u6c34\u6bcd
+name.277=\u5267\u6bd2\u7c73\u8bfa\u9c7c
+name.278=\u6d41\u5149\u77f3\u9996\u9c7c
+name.279=\u6fc0\u5149\u9c7c
+name.280=\u9b54\u9b3c\u9c7c
+name.281=\u5e7b\u6d77\u6c34\u6bcd
+name.282=\u5de8\u50cf\u4e4c\u8d3c
+name.283=\u730e\u9b42\u9ca8
+name.284=\u98ce\u66b4\u8681\u72ee
+name.285=\u84dd\u6c34\u6bcd
+name.286=\u7c89\u6c34\u6bcd
+name.287=\u7eff\u6c34\u6bcd
+name.288=\u8681\u72ee\u9a6c
+name.289=\u51b0\u96ea\u7cbe
+name.290=\u9ec4\u8702
+name.291=\u591a\u53f6\u9ec4\u8702
