resource pack update
misc slime texture & projectile update

--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
@@ -289,6 +289,15 @@ skins.288=288
 skins.289=289
 skins.290=290
 skins.291=291
+skins.292=292
+skins.293=293
+skins.294=294
+skins.295=295
+skins.296=296
+skins.297=297
+skins.298=298
+skins.299=299
+skins.300=300
 
 name.1=regex:\u53f2\u83b1\u59c6\u00a72|\u53f2\u83b1\u59c6\u738b|\u53f2\u83b1\u59c6\u5750\u9a91
 name.2=\u5ca9\u6d46\u53f2\u83b1\u59c6
@@ -581,3 +590,12 @@ name.288=\u8681\u72ee\u9a6c
 name.289=\u51b0\u96ea\u7cbe
 name.290=\u9ec4\u8702
 name.291=\u591a\u53f6\u9ec4\u8702
+name.292=\u5de8\u50cf\u86e4
+name.293=\u79c3\u9e70
+name.294=\u5996\u7cbe
+name.295=\u70c8\u7130\u9f99\u5377
+name.296=\u8840\u8089\u4e4b\u5899\u5899\u4f53
+name.297=\u81f3\u5c0a\u707e\u5384
+name.298=\u81f3\u5c0a\u707e\u96be
+name.299=\u81f3\u5c0a\u707e\u7978
+name.300=\u5f11\u795e\u4f20\u9001\u95e8
