misc config bugfix

--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/mob/slime/slime.properties
@@ -390,7 +390,7 @@ name.88=\u661f\u5c18\u4e4b\u9f99\u00a71
 name.89=\u661f\u5c18\u4e4b\u9f99
 name.90=\u6cf0\u62c9\u60a0\u60a0\u7403
 name.91=\u514b\u82cf\u9c81\u4e4b\u773c\u60a0\u60a0\u7403
-name.92=regex:\u6728\u5236\u60a0\u60a0\u7403|\u4e16\u754c\u541e\u566c\u8005|\u541e\u566c\u8005
+name.92=regex:\u6728\u5236\u60a0\u60a0\u7403|\u4e16\u754c\u541e\u566c\u8005|\u541e\u566c\u8005|\u541e\u566c\u8005\u00a71
 name.93=\u6291\u90c1\u7403
 name.94=\u94fe\u9524
 name.95=\u706b\u7130\u9524
