--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/blocks.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/blocks.yml
@@ -410,7 +410,7 @@ STAINED_GLASS_7:
 CHEST:
   totalProgress: 150
   dropItem:
-  - 箱子
+  - CHEST
 # unbreakables
 SMOOTH_BRICK_1:
   powerPickaxe: 999999
