--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/mobSpawning.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/mobSpawning.yml
@@ -256,81 +256,101 @@ spawnInfo:
     冰霜月1:
         僵尸精灵: 5
         姜饼人: 3
+        礼物宝箱怪: 1
     冰霜月2:
         僵尸精灵: 5
         精灵弓箭手: 2
+        礼物宝箱怪: 1
     冰霜月3:
         僵尸精灵: 8
         精灵弓箭手: 4
         姜饼人: 6
         胡桃夹士: 1
+        礼物宝箱怪: 1
     冰霜月4:
         僵尸精灵: 8
         精灵弓箭手: 6
         姜饼人: 5
+        礼物宝箱怪: 1
     冰霜月5:
         僵尸精灵: 10
         精灵弓箭手: 6
         胡桃夹士: 3
+        礼物宝箱怪: 1
     冰霜月6:
         精灵弓箭手: 10
         胡桃夹士: 5
         精灵直升机: 1
+        礼物宝箱怪: 1
     冰霜月7:
         姜饼人: 10
         精灵弓箭手: 8
         僵尸精灵: 4
+        礼物宝箱怪: 1
     冰霜月8:
         胡桃夹士: 10
         精灵弓箭手: 8
         精灵直升机: 3
         坎卜斯: 2
+        礼物宝箱怪: 1
     冰霜月9:
         胡桃夹士: 10
         姜饼人: 6
         精灵直升机: 4
+        礼物宝箱怪: 1
     冰霜月10:
         僵尸精灵: 7
         精灵直升机: 4
         坎卜斯: 2
+        礼物宝箱怪: 0.5
     冰霜月11:
         姜饼人: 10
         僵尸精灵: 6
         雪花怪: 4
+        礼物宝箱怪: 0.75
     冰霜月12:
         姜饼人: 10
         雪兽: 7
         僵尸精灵: 6
+        礼物宝箱怪: 0.75
     冰霜月13:
         精灵直升机: 6
         姜饼人: 10
         雪花怪: 4
+        礼物宝箱怪: 0.6
     冰霜月14:
         雪兽: 10
         坎卜斯: 6
+        礼物宝箱怪: 0.5
     冰霜月15:
         雪兽: 8
         精灵直升机: 6
+        礼物宝箱怪: 0.4
     冰霜月16:
         雪兽: 1
         雪花怪: 1
+        礼物宝箱怪: 0.1
     冰霜月17:
         雪兽: 4
         坎卜斯: 8
         精灵直升机: 6
+        礼物宝箱怪: 0.3
     冰霜月18:
         雪兽: 4
         胡桃夹士: 6
         坎卜斯: 8
         雪花怪: 1
         精灵直升机: 1
+        礼物宝箱怪: 0.3
     冰霜月19:
         雪兽: 4
         雪花怪: 1
         精灵直升机: 1
+        礼物宝箱怪: 0.1
     冰霜月20:
         雪兽: 1
         精灵直升机: 1
+        礼物宝箱怪: 0.05
 mobTier:
     鬼铃水母: 荒漠灾虫
     哥布林苦力: 克苏鲁之眼
@@ -374,6 +394,7 @@ mobTier:
     树精: 世纪之花
     地狱犬: 世纪之花
     胡闹鬼: 世纪之花
+    礼物宝箱怪: 世纪之花
     僵尸精灵: 世纪之花
     姜饼人: 世纪之花
     精灵弓箭手: 世纪之花
@@ -2326,7 +2347,7 @@ mobInfo:
                     defence: 64
                     knockback: 3
                     knockbackResistance: 0.8
-                    health: 4050
+                    health: 8750
     雪花怪:
         name: "雪花怪"
         monsterType: "SLIME"
