settings command & application
users can now customize many aspects of the gameplay with the settings command

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -12,7 +12,7 @@
   item: CLAY_BALL
   lore:
   - §r右键种下一棵快乐的小树
-  worth: 200
+  worth: 1000
   rarity: 0
 雪块:
   item: SNOW_BLOCK
@@ -14750,7 +14750,8 @@ Dodu的手炮:
   lore:
   - §r[坐骑]
   - §7▷ 坐骑：装备到坐骑栏后按坐骑按键[默认为R]乘坐坐骑
-  - §r坐在飞椅上时按住星流飞椅减速键[默认为X]将会以较低速度飞行
+  - §r坐在飞椅上时按住进升证章键[默认为X]将会以较低速度飞行
+  - §r注：进升证章主动效果不会在坐骑生效时被启用
   worth: 30000000
   rarity: 15
 日耀天塔柱:
