boss guides and bugfix
boss guides are updated to Plantera & Calamitas clone;
fixed several projectile-related bugs

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/recipes.yml
@@ -249,8 +249,7 @@ FURNACE:
     requireLevel: 3
     resultItem: 蘑菇锭:2
     requireItem:
-    - 叶绿锭:2
-    - 蘑菇:15
+    - 幽灵锭:2
     - 发光蘑菇
     recipeCategory: MATERIAL
   '38':
